@@ -29,7 +29,7 @@ HELANAL --- analysis of protein helices
 :Year: 2020
 :Copyright: GNU Public License v3
 
-.. versionadded:: 1.0.0
+.. versionadded:: 2.0.0
 
 This module contains code to analyse protein helices using the
 HELANAL_ algorithm
@@ -63,7 +63,9 @@ You can pass in a single selection::
     helanal = hel.HELANAL(u, select='name CA and resnum 161-187')
     helanal.run()
 
-    print(helanal.summary)
+All computed properties are available in ``.results``::
+
+    print(helanal.results.summary)
 
 Alternatively, you can analyse several helices at once by passing
 in multiple selection strings::
@@ -309,42 +311,42 @@ class HELANAL(AnalysisBase):
 
     Attributes
     ----------
-    local_twists : array or list of arrays
+    results.local_twists : array or list of arrays
         The local twist angle from atom i+1 to i+2.
         Each array has shape (n_frames, n_residues-3)
-    local_nres_per_turn : array or list of arrays
+    results.local_nres_per_turn : array or list of arrays
         Number of residues per turn, based on local_twist.
         Each array has shape (n_frames, n_residues-3)
-    local_axes : array or list of arrays
+    results.local_axes : array or list of arrays
         The length-wise helix axis of the local window.
         Each array has shape (n_frames, n_residues-3, 3)
-    local_heights : array or list of arrays
+    results.local_heights : array or list of arrays
         The rise of each local helix.
         Each array has shape (n_frames, n_residues-3)
-    local_helix_directions : array or list of arrays
+    results.local_helix_directions : array or list of arrays
         The unit vector from each local origin to atom i+1.
         Each array has shape (n_frames, n_residues-2, 3)
-    local_origins :array or list of arrays
+    results.local_origins :array or list of arrays
         The projected origin for each helix.
         Each array has shape (n_frames, n_residues-2, 3)
-    local_screw_angles : array or list of arrays
+    results.local_screw_angles : array or list of arrays
         The local screw angle for each helix.
         Each array has shape (n_frames, n_residues-2)
-    local_bends : array or list of arrays
+    results.local_bends : array or list of arrays
         The angles between local helix axes, 3 windows apart.
         Each array has shape (n_frames, n_residues-6)
-    all_bends : array or list of arrays
+    results.all_bends : array or list of arrays
         The angles between local helix axes.
         Each array has shape (n_frames, n_residues-3, n_residues-3)
-    global_axis : array or list of arrays
+    results.global_axis : array or list of arrays
         The length-wise axis for the overall helix. This points at
         the first helix window in the helix, so it runs opposite to
         the direction of the residue numbers.
         Each array has shape (n_frames, 3)
-    global_tilts : array or list of arrays
+    results.global_tilts : array or list of arrays
         The angle between the global axis and the reference axis.
         Each array has shape (n_frames,)
-    summary : dict or list of dicts
+    results.summary : dict or list of dicts
         Summary of stats for each property: the mean, the sample
         standard deviation, and the mean absolute deviation.
     """
@@ -418,49 +420,49 @@ class HELANAL(AnalysisBase):
         for key, dims in self.attr_shapes.items():
             empty = [self._zeros_per_frame(
                 dims, n_positions=n) for n in n_res]
-            setattr(self, key, empty)
+            setattr(self.results, key, empty)
 
-        self.global_axis = [self._zeros_per_frame((3,)) for n in n_res]
-        self.all_bends = [self._zeros_per_frame((n-3, n-3)) for n in n_res]
+        self.results.global_axis = [self._zeros_per_frame((3,)) for n in n_res]
+        self.results.all_bends = [self._zeros_per_frame((n-3, n-3)) for n in n_res]
 
     def _single_frame(self):
         _f = self._frame_index
         for i, ag in enumerate(self.atomgroups):
             results = helix_analysis(ag.positions, ref_axis=self.ref_axis)
             for key, value in results.items():
-                attr = getattr(self, key)
+                attr = getattr(self.results, key)
                 attr[i][_f] = value
 
     def _conclude(self):
         # compute tilt of global axes
-        self.global_tilts = []
+        self.results.global_tilts = tilts = []
         norm_ref = (self.ref_axis**2).sum() ** 0.5
-        for axes in self.global_axis:
+        for axes in self.results.global_axis:
             cos = np.matmul(self.ref_axis, axes.T) / \
                 (mdamath.pnorm(axes)*norm_ref)
             cos = np.clip(cos, -1.0, 1.0)
-            self.global_tilts.append(np.rad2deg(np.arccos(cos)))
+            tilts.append(np.rad2deg(np.arccos(cos)))
 
         global_attrs = ['global_axis', 'global_tilts', 'all_bends']
         attrnames = list(self.attr_shapes.keys()) + global_attrs
         # summarise
-        self.summary = []
+        self.results.summary = []
         for i in range(len(self.atomgroups)):
             stats = {}
             for name in attrnames:
-                attr = getattr(self, name)
+                attr = getattr(self.results, name)
                 mean = attr[i].mean(axis=0)
                 dev = np.abs(attr[i]-mean)
                 stats[name] = {'mean': mean,
                                'sample_sd': attr[i].std(axis=0, ddof=1),
                                'abs_dev': dev.mean(axis=0)}
-            self.summary.append(stats)
+            self.results.summary.append(stats)
 
         # flatten?
         if len(self.atomgroups) == 1 and self._flatten:
             for name in attrnames + ['summary']:
-                attr = getattr(self, name)
-                setattr(self, name, attr[0])
+                attr = getattr(self.results, name)
+                setattr(self.results, name, attr[0])
 
     def universe_from_origins(self):
         """
@@ -471,7 +473,7 @@ class HELANAL(AnalysisBase):
         Universe or list of Universes
         """
         try:
-            origins = self.local_origins
+            origins = self.results.local_origins
         except AttributeError:
             raise ValueError('Call run() before universe_from_origins')
 
@@ -485,6 +487,6 @@ class HELANAL(AnalysisBase):
                                    atom_resindex=np.arange(n_res),
                                    trajectory=True).load_new(xyz)
             universe.append(u)
-        if not isinstance(self.local_origins, list):
+        if not isinstance(self.results.local_origins, list):
             universe = universe[0]
         return universe
